<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#DFF6FF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="EADI"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_register"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_logo"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_register_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:text="Log into\nyour account"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_register" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="400dp" />

        <ImageView
            android:id="@+id/iv_rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_background_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <EditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <com.bangkit.eadi.ui.customview.EditTextEmail
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

        <EditText
            android:id="@+id/ed_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="8dp"
            android:hint="@string/phone"
            android:inputType="number|phone"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

        <com.bangkit.eadi.ui.customview.EditTextPassword
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_phone"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:padding="8dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_rectangle"
            app:layout_constraintStart_toStartOf="@+id/iv_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/btn_register">

            <TextView
                android:id="@+id/tv_redirect_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_Account"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_redirect_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>